app-demo/microservices-demo/deploy/kubernetes/manifests/10-front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: sock-shop
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    name: front-end
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8079
  selector:
    name: front-end
