app-demo/microservices-demo/deploy/kubernetes/manifests/front-end-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  namespace: sock-shop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:833565098889:certificate/02ef0c72-00b0-44b6-b075-e1a61423ad87
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: desafio-acs
    # Redirecionar HTTP para HTTPS (opcional)
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: frontend.thesams.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
